--- a/client/Intro/intro.html
+++ b/client/Intro/intro.html
@@ -350,9 +350,11 @@
                   </p>
                 </div>
               </div>
+              <a href="../index.html">
               <button class="animated__button section--button ">
                 Learn more
               </button>
+            </a>
             </div>
             <figure class="section__img--wrapper value__img-wrapper">
               <img
